--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -4,8 +4,8 @@
 	<title>Hello World!</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
-	<p>Welcome to my website.</p>
+	<h1>Hello!</h1>
+	<p>Welcome to my cicd website.</p>
 	<img src="https://media.giphy.com/media/l0Iy52W7zu5U6Y5k4/giphy.gif" alt="GIF">
 </body>
 </html>
