--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hello World!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Notes</title>
 </head>
 <body>
-	<h1>Hello!</h1>
-	<p>Welcome to my cicd website.</p>
-	<img src="https://media.giphy.com/media/l0Iy52W7zu5U6Y5k4/giphy.gif" alt="GIF">
+    <h1>My Notes</h1>
+    <form>
+        <label for="note-title">Title:</label>
+        <input type="text" id="note-title" name="note-title"><br><br>
+        <label for="note-body">Note:</label>
+        <textarea id="note-body" name="note-body"></textarea><br><br>
+        <button type="submit">Save Note</button>
+    </form>
 </body>
 </html>
